tests/snapshots/integration_test__tests__should_error_when_assigning_void_to_a_variable.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nfunc test() {}\nvar my_variable = test();\n\"#)"
---
stdout: ""
stderr: ""
error:
  ExecutionError:
    message: Variables must not be declared with a type of void
    call_stack:
      - test
