tests/snapshots/integration_test__tests__should_error_when_creating_array_with_inconsistent_types.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nvar variable = [\"test\", 123];\n\"#, \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  PostProcessError:
    message: Expected all values of an array to be the same type
exit_code: 103
