tests/snapshots/integration_test__tests__should_error_when_defined_function_arguments_are_the_incorrect_type.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        func test(str: string, num: integer, bool: boolean) {}\n        test(123, \"test\", false);\n        \"#,\n    \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  PostProcessError:
    message: Arguments are not correct
exit_code: 103
