tests/snapshots/integration_test__tests__should_error_when_function_called_with_argument_argument_of_wrong_type.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nfunc test(arg: string) {}\ntest(123);\n\"#)"
---
stdout: ""
stderr: ""
error:
  ExecutionError:
    message: Argument arg has type string but got value with type integer
    call_stack:
      - test
exit_code: 103
