tests/snapshots/integration_test__tests__should_error_when_non_integer_value_used_in_index.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        var array = [0, 1, 2, 3, 4, 5];\n        array[\"string\"];\n        \"#,\n    \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  PostProcessError:
    message: Index expression must evaluate to integer
exit_code: 103
