tests/snapshots/integration_test__tests__should_error_when_resolving_uninitialized_variable.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nvar mut variable: string;\nout(variable);\n\"#, \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  ExecutionError:
    message: Variable variable has not been initialized.
    call_stack: []
exit_code: 104
