tests/snapshots/integration_test__tests__should_error_when_uninitialized_variable_defined_without_type.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nvar variable;\n\"#)"
---
stdout: ""
stderr: ""
error:
  ParserError:
    message: "variable declaration must be followed by a :"
    token: Semicolon
    start: 13
    end: 14
