tests/snapshots/integration_test__tests__should_fail_if_exit_used_with_non_integer.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nexit \"test\";\n\"#)"
---
stdout: ""
stderr: ""
error:
  ExecutionError:
    message: exit statement must be provided with an integer value
    call_stack: []
exit_code: 103
