tests/snapshots/integration_test__tests__should_fail_if_exit_used_with_out_of_range_value.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nexit 1000;\n\"#)"
---
stdout: ""
stderr: ""
error:
  ExecutionError:
    message: "exit code must be between 0 and 255, but got 1000"
    call_stack: []
exit_code: 103
