tests/snapshots/integration_test__tests__should_fail_to_create_non_mutable_uninitialized_variable.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        var variable: string;\n        \"#, \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  ParserError:
    message: Uninitialized variable must be mutable
    token: Semicolon
    start: 29
    end: 30
exit_code: 102
