tests/snapshots/integration_test__tests__should_fail_to_mutate_array_in_use.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n# Array example\nvar array = [\"first\", \"second\", \"third\"];\nfor value in array {\n  array.pop();\n};\n\"#,\n    \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  PostProcessError:
    message: "Instance function with name 'pop' and type signature () not found"
exit_code: 103
